syntax = "proto3";

// 命 令 号: 1023
// 命令名称: voice_start_record
// 命令描述: 开始录制语音文件
// 文件名称: dec1023_vr_start_record.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceStartRecord";

message VoiceStartRecordRequest {
  // ATTR: REQUSET
  string file_name = 1; //文件名
  uint32 file_duration = 2; //自动结束录音时长
  uint32 file_format = 3;
  uint32 session_id = 4;
}

message VoiceStartRecordResponse {

}
